[project]
name = "flight_ag"
version = "0.1.0"
description = "flight_ag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.12.2",
    "langchain-apify>=0.1.6",
]

[project.scripts]
flight_ag = "flight_ag.main:run"
run_crew = "flight_ag.main:run"
train = "flight_ag.main:train"
replay = "flight_ag.main:replay"
test = "flight_ag.main:test"
run_with_trigger = "flight_ag.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.setuptools.packages.find]
where = ["src"]
